package protobufs;

import "common.proto";

message VoteRequestPb {
  required uint64 term = 1;
  required fixed64 candidateId = 2;
  required uint64 lastLogIndex = 3;
  required uint64 lastLogTerm = 4;
  required fixed64 clusterId = 5;
}

message VoteResponsePb {
  required fixed64 nodeId = 1;
  required uint64 term = 2;
  required bool voteGranted = 3;
}

message AppendRequestPb {
  required uint64 term = 1;
  required fixed64 leaderId = 2;
  required uint64 prevLogIndex = 3;
  required uint64 prevLogTerm = 4;
  required uint64 leaderCommit = 5;
  repeated EntryPb entries = 6;
}

message AppendResponsePb {
  required uint64 term = 1;
  required bool success = 2;
}

message ProposalResponsePb {
  required uint64 newIndex = 1;
  optional string error = 2;
}

message DiscoveryResponsePb {
  required fixed64 nodeId = 1;
}
